added updated gem gem "actionview", ">= 5.2.4.2"

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,14 @@
+/* app/assets/stylesheets/components/_navbar.scss */
+.navbar-lewagon {
+  // [...]
+  background-color: transparent;
+  transition: 0.5s background-color ease;
+}
+
+.navbar-lewagon-white {
+  background-color: white;
+}
+
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
