--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,8 +1,17 @@
-.home-banner {
-  background-image: url('https://images.unsplash.com/photo-1531973819741-e27a5ae2cc7b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
+.banner {
   background-size: cover;
+  background-position: center;
+  padding: 150px 0;
   height: 100vh;
-  color: #eee;
-  text-align: center;
-  padding-top: 40vh;
 }
+
+.banner-text {
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 80px;
+  font-weight: bold;
+  font-family: 'Special Elite', cursive;
+  text-align: center;
+  margin-top: 275px;
+}
+
