--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,4 +1,5 @@
 // Import page-specific CSS files here.
 @import "home";
-@import "show";
-
+@import "cocktailshow";
+@import "footer";
+@import "cocktail_index";
