--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,32 +1,22 @@
-
-<div class="card-trip">
-  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1559778920-fb8cd0e1ec86?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=749&q=80);">
-    <div class="container">
-      <h1><%= @cocktail.name %></h1>
-    </div>
+<!-- Cocktail Picture Banner -->
+<div class="cocktail-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80);">
+  <div class="container">
+    <div class="cocktail-banner-text">Singapore Slinger</div>
   </div>
-  <h2 class="m-3 text-center"></h2>
-    <div class="d-flex justify-content-between m-2">
-      <div class="container-fluid mt-3 w-50">
-        <h3 class="font-weight-bold">Description</h3>
-        <p class="cocktail-description"><%= @cocktail.description %></p>
-        <div class="btn-group mt-3" role="group" aria-label="Basic example">
-          <%= link_to "Edit", edit_cocktail_path(@cocktail), class: 'btn btn-primary mr-2 px-3' %>
-        </div>
-      </div>
-
-      <div class="container mt-3 w-50">
-        <h3 class="font-weight-bold">Ingredients Needed</h3>
-        <ul class="list-group">
-          <% @doses.each do |dose| %>
-            <li class="mt-1 list-group-item">
-              <strong><%= dose.ingredient.name %></strong> - <%= dose.description %><%= link_to "(Delete)", cocktail_dose_path(@cocktail, dose), method: :Delete, data: { confirm: "Are you sure" }, class: 'float-right text-decoration-none' %>
-            </li>
-          <% end %>
-        </ul>
-        <div class="btn-group mt-3" role="group" aria-label="Basic example">
-          <%= link_to "Add", new_cocktail_dose_path(@cocktail, @doses), class: 'btn btn-primary mr-2 px-3' %>
-        </div>
-      </div>
-    </div>
 </div>
+
+<!-- description box -->
+<div class="cocktail-description">
+  <div class="description-title">Description</div>
+  <div class="description-text"><%= @cocktail.description %></div>
+</div>
+
+<!-- Ingredient List -->
+<div class="ingredient-header">
+  Ingredient
+</div>
+<div class="categories">
+  <!-- Whiskey -->
+  <div class="ingredient-text" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1579613832107-64359da23b0c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)">
+    1 ml of lemon juice
+  </div>
