--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -8,9 +8,9 @@
 <div class="container mt-5">
   <div class="cards">
     <% @cocktails.each do |cocktail| %>
-      <%= link_to cocktail_path(cocktail) do %>
+      <%= link_to cocktail_path(cocktail), :class=>'no-decoration' do %>
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-          <p ><%= cocktail.name %></p>
+          <%= cocktail.name %>
         </div>
       <% end %>
     <% end %>
