--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,28 +11,28 @@
 <!-- List of Alcohols -->
 <div class="categories">
   <!-- Whiskey -->
-  <%= link_to whiskeys_path do %>
+  <%= link_to whiskeys_path, :class=>'no-decoration' do %>
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1542741081-bc7afc3480fe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80)">
-      Whiskey
+      <p>Whiskey</p>
     </div>
   <% end %>
 
   <!-- Wine -->
-  <%= link_to wines_path do %>
+  <%= link_to wines_path, :class=>'no-decoration' do %>
     <div class="card-category text-decoration-none" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1561955147-e9083536e573?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80)">
       Wine
     </div>
   <% end %>
 
     <!-- Cocktail -->
-  <%= link_to cocktails_path do %>
+  <%= link_to cocktails_path, :class=>'no-decoration' do %>
     <div class="card-category no-text-deocration" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80)">
       Cocktail
     </div>
   <% end %>
 
   <!-- Beer -->
-  <%= link_to beers_path do %>
+  <%= link_to beers_path, :class=>'no-decoration' do %>
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1535958636474-b021ee887b13?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80 )">
       Beer
     </div>
