--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,6 +5,27 @@
   margin-bottom: 120px;
 }
 
+.categories:hover .card-category{
+  filter:blur(3px);
+  opacity:.5;
+  transform: scale(.98);
+  box-shadow:none;
+  transition-duration: 0.5s;
+
+}
+
+.categories:hover .card-category:hover{
+  transform:scale(1);
+  filter:blur(0px);
+  opacity:1;
+  box-shadow:0 8px 20px 0px rgba(0,0,0,0.125);
+  transition-duration: 0.5s;
+}
+
+.no-decoration:hover {
+  text-decoration: none;
+}
+
 .category-title {
   font-family: 'Roboto', sans-serif;
   text-align: center;
@@ -27,10 +48,12 @@
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin-bottom: 30px;
+}
+
+.card-category:hover {
   text-decoration: none;
 }
 
-.card-category p:hover {
-  text-decoration: none !important;
+.card-category p:active {
+  text-decoration: none;
 }
-
