--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container form-margin-top">
   <%= simple_form_for @cocktail do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
