--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,21 +2,18 @@
 <div class="cocktail-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80);">
   <div class="container">
     <div class="cocktail-banner-text">Singapore Slinger</div>
+    <div class="cocktail-banner-description"><%= @cocktail.description %></div>
   </div>
-</div>
-
-<!-- description box -->
-<div class="cocktail-description">
-  <div class="description-title">Description</div>
-  <div class="description-text"><%= @cocktail.description %></div>
 </div>
 
 <!-- Ingredient List -->
 <div class="ingredient-header">
-  Ingredient
+  Ingredients
 </div>
 <div class="categories">
-  <!-- Whiskey -->
-  <div class="ingredient-text" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1579613832107-64359da23b0c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)">
-    1 ml of lemon juice
-  </div>
+  <!-- Ingredient -->
+  <% @cocktail.ingredients.each do |ingredient| %>
+    <div class="ingredient-text" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1579613832107-64359da23b0c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)">
+      <%= ingredient.doses[0].unit %> of <%= ingredient.name %>
+    </div>
+  <% end %>
