--- a/app/assets/stylesheets/pages/_cocktailshow.scss
+++ b/app/assets/stylesheets/pages/_cocktailshow.scss
@@ -1,4 +1,4 @@
-.cocktail-banner {
+.index-banner {
   background-size: cover;
   // background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -7,7 +7,7 @@
   margin-top: 70px;
 }
 
-.cocktail-banner-text {
+.index-banner-text {
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 60px;
@@ -15,7 +15,7 @@
   text-align: center;
 }
 
-.cocktail-banner-description {
+.index-banner-description {
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-family: 'Roboto', sans-serif;
