--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -29,4 +29,12 @@
 
 .margin_space_for_navbar {
   margin-top: 70px;
+  width: 100%;
+}
+
+@media (min-width: 100px) and (max-width: 575px) {
+  .margin_space_for_navbar {
+    margin-top: 70px;
+    width: 554px;
+  }
 }
