--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,8 +1,8 @@
 <!-- Cocktail Picture Banner -->
-<div class="cocktail-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80);">
+<div class="index-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80);">
   <div class="container">
-    <div class="cocktail-banner-text">Singapore Slinger</div>
-    <div class="cocktail-banner-description"><%= @cocktail.description %></div>
+    <div class="index-banner-text"><%= @cocktail.name %></div>
+    <div class="index-banner-description"><%= @cocktail.description %></div>
   </div>
 </div>
 
