--- a/app/assets/stylesheets/pages/_footer.scss
+++ b/app/assets/stylesheets/pages/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #4F4F4F;
+  background: #343A40;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -31,4 +31,10 @@
 
 .footer-copyright {
   color: white;
+}
+
+@media (min-width: 100px) and (max-width: 575px) {
+  .footer-copyright {
+    display: none;
+}
 }
