--- a/app/assets/stylesheets/pages/_wineshow.scss
+++ b/app/assets/stylesheets/pages/_wineshow.scss
@@ -1,5 +1,5 @@
 .wine-description {
-
+  margin-bottom: 100px;
 }
 
 .description-box {
@@ -8,4 +8,16 @@
 
 .box-info {
   width: 600px;
+}
+
+.name-title {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.information {
+  width: 350px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 100px;
 }
