--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
-      <%= link_to "Home", root_path, class: "navbar-brand"%>
+    <div class="navbar navbar-expand-sm navbar-dark bg-dark navbar-lewagon fixed-top">
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,18 +28,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <%= link_to "Add New Drink", "#", class: "nav-link nav-link-color" %>
+            <%= link_to "Home", "#", class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "About", "#", class: "nav-link nav-link-color" %>
+            <%= link_to "Add New Drink", "#", class: "nav-link" %>
           </li>
         </ul>
       </div>
     </div>
     <!-- individual pages -->
-    <div class="margin_space_for_navbar">
       <%= yield %>
-    </div>
 
     <!-- footer -->
     <div class="footer">
