--- a/app/assets/stylesheets/pages/_footer.scss
+++ b/app/assets/stylesheets/pages/_footer.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 70px;
+  height: 60px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   position: fixed;
@@ -18,15 +18,17 @@
 }
 
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  display: block;
+  text-align: center;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 27px;
   text-decoration: none;
-  font-size: 24px;
   padding: 0px 10px;
 }
 
 .footer-links a:hover {
-  opacity: 1;
+  opacity: 0.5;
 }
 
 .footer-copyright {
@@ -35,6 +37,16 @@
 
 @media (min-width: 100px) and (max-width: 575px) {
   .footer-copyright {
-    display: none;
-}
+    font-size: 9px;
+    text-align: center;
+  }
+
+  .footer {
+    justify-content: space-around;
+    padding: 0px 15px;
+  }
+
+  .footer-links a {
+  font-size: 30px;
+  }
 }
