--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,9 +32,9 @@
   <% end %>
 
   <!-- Beer -->
-  <%= link_to beers_path, :class=>'no-decoration' do %>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1535958636474-b021ee887b13?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80 )">
+  <%#= link_to beers_path, :class=>'no-decoration' do %>
+<!--     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1535958636474-b021ee887b13?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80 )">
       Beer
-    </div>
-  <% end %>
+    </div> -->
+  <%# end %>
 </div>
