--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,11 +42,11 @@
     <!-- footer -->
     <div class="footer">
       <div class="footer-links">
-        <a href="#"><i class="fab fa-github"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-github" id="github"></i></a>
+        <a href="#"><i class="fab fa-instagram" id="instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook" id="facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter" id="twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin" id="linkedin"></i></a>
       </div>
       <div class="footer-copyright">
         Brought to you by Kenn Chong
