--- a/app/views/whiskeys/new.html.erb
+++ b/app/views/whiskeys/new.html.erb
@@ -1,5 +1,6 @@
 
 <div class="container form-margin-top">
+  <div class="form-header">Add New Whiskey</div>
   <%= simple_form_for @whiskey do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
