--- a/app/views/wines/new.html.erb
+++ b/app/views/wines/new.html.erb
@@ -1,5 +1,6 @@
 
 <div class="container form-margin-top">
+  <div class="form-header">Add New Wine</div>
   <%= simple_form_for @wine do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
