--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,3 +1,10 @@
 .form-margin-top {
-  margin-top: 100px;
+  margin-top: 80px;
+}
+
+.form-header {
+  font-family: 'Special Elite', cursive;
+  font-size: 30px;
+  font-weight: 700;
+  text-align: center;
 }
