--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,8 +1,10 @@
 
 <div class="container form-margin-top">
+  <div class="form-header">Add New Cocktail</div>
   <%= simple_form_for @cocktail do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
+    <%= f.association :ingredients %>
     <%= f.button :submit, class: "btn btn-primary" %>
   <% end %>
 </div>
