--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -1,4 +1,7 @@
-<%= simple_form_for [@cocktail,@ingredient] do |f| %>
-  <%= f.input :name %>
-  <%= f.button :submit, class: "btn btn-primary" %>
-<% end %>
+
+<div class="container form-margin-top">
+  <%= simple_form_for [@cocktail,@ingredient] do |f| %>
+    <%= f.input :name %>
+    <%= f.button :submit, class: "btn btn-primary" %>
+  <% end %>
+</div>
