--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,17 +32,34 @@
             <%= link_to "Home", root_path, class: "nav-link" %>
           </li>
           <!-- Add new Cocktail -->
-          <li class="nav-item">
-            <%= link_to "Add New Cocktail", new_cocktail_path, class: "nav-link" %>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Add New Drink
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+              <a class="nav-item">
+                <%= link_to "Add New Cocktail", new_cocktail_path, class: "dropdown-item" %>
+              </a>
+              <!-- Add New Wine -->
+              <a class="nav-item">
+                <%= link_to "Add New Wine", new_wine_path, class: "dropdown-item" %>
+              </a>
+              <!-- Add New Whiskey -->
+              <a class="nav-item">
+                <%= link_to "Add New Whiskey", new_whiskey_path, class: "dropdown-item" %>
+              </a>
+              <!-- divider -->
+              <div class="dropdown-divider"></div>
+              <!-- New Ingredient -->
+              <a class="nav-item">
+                <%= link_to "Add New Ingredient", new_ingredient_path, class: "dropdown-item" %>
+              </a>
+
+            </div>
           </li>
-          <!-- Add New Wine -->
-          <li class="nav-item">
-            <%= link_to "Add New Wine", new_wine_path, class: "nav-link" %>
-          </li>
-          <!-- Add New Whiskey -->
-          <li class="nav-item">
-            <%= link_to "Add New Whiskey", new_whiskey_path, class: "nav-link" %>
-          </li>
+
         </ul>
       </div>
     </div>
