--- a/app/views/whiskeys/new.html.erb
+++ b/app/views/whiskeys/new.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :year %>
+    <%= f.input :photo, as: :file %>
     <%= f.button :submit, class: "btn btn-primary" %>
   <% end %>
 </div>
