--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -4,7 +4,7 @@
   <%= simple_form_for @cocktail do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
-    <%= f.association :ingredients %>
+    <%= f.input :photo, as: :file %>
     <%= f.button :submit, class: "btn btn-primary" %>
   <% end %>
 </div>
