made all whiskey, wine and cocktail image to be shown from Cloudinary

--- a/app/views/whiskeys/index.html.erb
+++ b/app/views/whiskeys/index.html.erb
@@ -9,7 +9,7 @@
   <div class="cards">
     <% @whiskeys.each do |whiskey| %>
       <%= link_to whiskey_path(whiskey), :class=>'no-decoration' do %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key %>')">
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path whiskey.photo.key %>')">
           <%= whiskey.name %>
         </div>
       <% end %>
