--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,5 @@
 <!-- Cocktail Picture Banner -->
-<div class="index-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80);">
+<div class="index-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @cocktail.photo.key %>');">
   <div class="container">
     <div class="index-banner-text"><%= @cocktail.name %></div>
     <div class="index-banner-description"><%= @cocktail.description %></div>
@@ -13,7 +13,7 @@
 <div class="categories">
   <!-- Ingredient -->
   <% @cocktail.ingredients.each do |ingredient| %>
-    <div class="ingredient-text" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1579613832107-64359da23b0c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)">
+    <div class="ingredient-text" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(url('<%= cl_image_path ingredient.photo.key %>'))">
       <%= ingredient.doses[0].unit %> of <%= ingredient.name %>
     </div>
   <% end %>
