--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -9,7 +9,7 @@
   <div class="cards">
     <% @wines.each do |wine| %>
       <%= link_to wine_path(wine), :class=>'no-decoration' do %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key %>')">
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path wine.photo.key %>')">
           <%= wine.name %>
         </div>
       <% end %>
