--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,11 +69,8 @@
     <!-- footer -->
     <div class="footer">
       <div class="footer-links">
-        <a href="#"><i class="fab fa-github" id="github"></i></a>
-        <a href="#"><i class="fab fa-instagram" id="instagram"></i></a>
-        <a href="#"><i class="fab fa-facebook" id="facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter" id="twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin" id="linkedin"></i></a>
+        <a href="https://github.com/kennchong85" target="_blank"><i class="fab fa-github" id="github"></i></a>
+        <a href="https://www.linkedin.com/in/kenn-chong-pmp-psm1-a89a8b27/" target="_blank"><i class="fab fa-linkedin" id="linkedin"></i></a>
       </div>
       <div class="footer-copyright">
         Brought to you by Kenn Chong
