--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,10 +56,12 @@
               <a class="nav-item">
                 <%= link_to "Add New Ingredient", new_ingredient_path, class: "dropdown-item" %>
               </a>
-
             </div>
           </li>
-
+          <!-- Ingredient List -->
+          <li class="nav-item">
+            <%= link_to "Ingredients", ingredients_path, class: "nav-link" %>
+          </li>
         </ul>
       </div>
     </div>
