--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Ingredients#index</h1>
-<p>Find me in app/views/ingredients/index.html.erb</p>
+<!-- Ingredients Picture Banner -->
+<div class="index-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1517260739337-6799d239ce83?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);">
+  <div class="container">
+    <div class="index-banner-text">Ingredients</div>
+  </div>
+</div>
+<!-- Individual Wine cards -->
+<div class="container mt-5">
+  <% if @ingredients.empty? %>
+    <div class="category-title">There are no ingredients added</div>
+  <% else %>
+    <div class="cards">
+      <% @ingredients.each do |ingredient| %>
+        <%= link_to ingredient_path(ingredient), :class=>'no-decoration' do %>
+          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path ingredient.photo.key %>')">
+            <%= ingredient.name %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
