--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -6,13 +6,17 @@
 </div>
 <!-- Individual Wine cards -->
 <div class="container mt-5">
-  <div class="cards">
-    <% @wines.each do |wine| %>
-      <%= link_to wine_path(wine), :class=>'no-decoration' do %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path wine.photo.key %>')">
-          <%= wine.name %>
-        </div>
+  <% if @ingredients.empty? %>
+    <div class="category-title">There are no wine added. Please add a new wine.</div>
+  <% else %>
+    <div class="cards">
+      <% @wines.each do |wine| %>
+        <%= link_to wine_path(wine), :class=>'no-decoration' do %>
+          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path wine.photo.key %>')">
+            <%= wine.name %>
+          </div>
+        <% end %>
       <% end %>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
 </div>
