fixed index error

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 <!-- Individual Cocktail cards -->
 <div class="container mt-5">
- <% if @ingredients.empty? %>
+ <% if @cocktails.empty? %>
     <div class="category-title">There are no cocktail added. Please add a new cocktail.</div>
   <% else %>
     <div class="cards">
