--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 <!-- Individual Wine cards -->
 <div class="container mt-5">
-  <% if @ingredients.empty? %>
+  <% if @wines.empty? %>
     <div class="category-title">There are no wine added. Please add a new wine.</div>
   <% else %>
     <div class="cards">
