--- a/app/views/whiskeys/index.html.erb
+++ b/app/views/whiskeys/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 <!-- Individual Whiskey cards -->
 <div class="container mt-5">
-  <% if @ingredients.empty? %>
+  <% if @whiskeys.empty? %>
     <div class="category-title">There are no whiskey added. Please add a new whiskey.</div>
   <% else %>
     <div class="cards">
