--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,7 +7,7 @@
 <!-- Individual Cocktail cards -->
 <div class="container mt-5">
  <% if @cocktails.empty? %>
-    <div class="category-title">There are no cocktail added. Please add a new cocktail.</div>
+    <div class="category-title">There are no cocktail added. Please add a new cocktail. test</div>
   <% else %>
     <div class="cards">
       <% @cocktails.each do |cocktail| %>
